apps/teste2/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teste2
  labels:
    kubernetes.io/metadata.name: teste2
    backstage.io/kubernetes-id: teste2
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
