apps/teste2/base/teste2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teste2-svc
  namespace: teste2
  annotations:
    external-dns.alpha.kubernetes.io/hostname: teste2.diegoluisi.eti.br
  labels:
    app: teste2
    version: 0.0.1
    backstage.io/kubernetes-id: teste2
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: teste2
