apps/teste2/base/teste2-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste2-vs
  namespace: teste2
  labels:
    app: teste2
    version: 0.0.1
    backstage.io/kubernetes-id: teste2
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - teste2.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: teste2-svc
      weight: 100
